--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: report-app
     env: static
     branch: main
-    buildCommand: npm ci && npm run build
+    buildCommand: npm ci && npm run build && ls -la dist
     staticPublishPath: dist
